# otterdict

./: .gitignore  CMakeLists.txt  Doxyfile  Makefile  README  otterdict.ottproj  otterdict.pro
plugins/: plugins.pro
plugins/echoplugin/: CMakeLists.txt  EchoDictionary.cpp  EchoDictionary.h  EchoPlugin.cpp  EchoPlugin.h  ReverseDictionary.cpp  ReverseDictionary.h  echoplugin.pro
plugins/slovnikczplugin/: CMakeLists.txt  HtmlNode.h  SlovnikCzDictionary.cpp  SlovnikCzDictionary.h  SlovnikCzPlugin.cpp  SlovnikCzPlugin.h  slovnikczplugin.pro
plugins/thesauruscomplugin/: CMakeLists.txt  HtmlParser.cpp  ParserSax.h  ThesaurusComDictionary.cpp  ThesaurusComDictionary.h  ThesaurusComPlugin.cpp  ThesaurusComPlugin.h  thesauruscomplugin.pro
src/: ActionZone.cpp  ActionZone.h  CMakeLists.txt  Dictionary.h  DictionaryShelfPluginInterface.h  PluginManager.cpp  PluginManager.h  TranslationPluginInterface.h  TranslationResultsViewer.cpp  TranslationResultsViewer.h  config.h.cmake  flag.xpm  main.cpp  preferences.xpm  src.pro
src/www/: CMakeLists.txt  HtmlNode.cpp  HtmlParser.h  ParserSax.h  WebPage.cpp  WebPage.h
